tests/invalid/runtime/glyph_add.pts
function main() : void {
    glyph a = "A"[0];
    glyph b = "B"[0];
    glyph c = a + b;
}
